# at-html-schemaorg

./: .flake8  GCP.md  Makefile  pyproject.toml
software/: __init__.py  requirements.txt
software/gcloud/: deploy2dev.croud.org.sh  deploy2gcloud.sh
