[project]
name = "at-html-schemaorg"
version = "0.1.0"
description = "Fork of https://github.com/schemaorg/schemaorg/tree/main"
authors = [
    {name = "Conor Fehilly",email = "conor.fehilly@croud.com"}
]
readme = "../README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "api (>=0.0.7,<0.0.8)",
    "beautifulsoup4 (>=4.10.0,<5.0.0)",
    "colorama (>=0.4.4,<0.5.0)",
    "Flask (>=2.3.2,<3.0.0)",
    "Jinja2 (>=3.1.6,<4.0.0)",
    "ordereddict (>=1.1,<2.0)",
    "Pygments (>=2.15.0,<3.0.0)",
    "rdflib (>=6.1.1,<7.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "six (>=1.16.0,<2.0.0)",
    "markdown2 (>=2.5.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 128
target-version = ['py39']
exclude = '''
/(
    \.venv
  | examples
)/
'''
